fixed oversized div causing overflow

--- a/src/Pages/DrillerLog/Log.scss
+++ b/src/Pages/DrillerLog/Log.scss
@@ -7,6 +7,7 @@ $LogSearchButtonWidth: 75px;
     background-position: center; /* Center the image */
     background-size: cover;
     height: 100%;
+    width: 100%;
 
     #LogSearchBtn {
         cursor: pointer;
